--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,9 @@ name = "DataLoad"
 uuid = "ffbaed32-42bc-44f4-bdfd-c6c5a0cc1edb"
 authors = ["FrancisH-C <francishchantal@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+ParquetIO = "12c9498c-612a-11e9-3465-dfea0c82c75b"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
