--- a/Project.toml
+++ b/Project.toml
@@ -6,5 +6,6 @@ version = "0.1.0"
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 ParquetIO = "12c9498c-612a-11e9-3465-dfea0c82c75b"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
